test/tests/stages/8_loops/valid/extra_credit/switch_empty.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[34]:
  int
  identifier(main)
  (
  void
  )
  {
  int
  identifier(x)
  =
  const int(10)
  ;
  switch
  (
  identifier(x)
  =
  identifier(x)
  +
  const int(1)
  )
  {
  }
  switch
  (
  identifier(x)
  =
  identifier(x)
  +
  const int(1)
  )
  ;
  return
  identifier(x)
  ;
  }
