test/tests/stages/8_loops/invalid_parse/extra_credit/switch_no_condition.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[13]:
  int
  identifier(main)
  (
  void
  )
  {
  switch
  {
  return
  const int(0)
  ;
  }
  }
